--- a/index.html
+++ b/index.html
@@ -8,5 +8,9 @@
   </head>
   <body>
     <h1>Bee's Garden</h1>
+    <main>
+      <p>G'day Interwebz! This is my gardening website where I share all the hot tips I've learned with my two months of gardening experience. I also intend to blog about things that irritate me like that possum that ate all of my silverbeet. Compelling stuff indeed, so remember to bookmark this site and watch this space for future updates!</p>
+    </main>
+    <footer>&copy; <a href="https://www.twitter.com/BrendanGasparin">Brendan Gasparin</a></footer>
   </body>
 </html>
