Link stylesheet to index.html, include potential colour scheme in comments of stylesheet

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="device=device-width, initial-scale=1.0" />
     <title>Bee's Garden</title>
     <meta name="keywords" content="Brendan Gasparin, Brendan, Gasparin, gardening, australia, tasmania, hobart, organic" />
+    <link href="./css/style.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
     <h1>Bee's Garden</h1>
