--- a/index.html
+++ b/index.html
@@ -7,10 +7,13 @@
     <meta name="keywords" content="Brendan Gasparin, Brendan, Gasparin, gardening, australia, tasmania, hobart, organic" />
     <link rel="stylesheet" href="css/reset.css" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Courgette&family=Patrick+Hand&display=swap" rel="stylesheet">
     <link href="./css/style.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
-    <h1>Bee's Garden</h1>
+    <h1>Bee's Garden Tasmania</h1>
     <main class="container">
       <p>G'day Interwebz! This is my gardening website where I share all the hot tips I've learned with my two months of gardening experience. I also intend to blog about things that irritate me like that possum that ate all of my silverbeet. Compelling stuff, so remember to bookmark this site and watch this space for future updates!</p>
     </main>
