--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <body>
     <h1>Bee's Garden Tasmania</h1>
     <main class="container">
-      <p>G'day Interwebz! This is my gardening website where I share all the hot tips I've learned with my two months of gardening experience. I also intend to blog about things that irritate me like that possum that ate all of my silverbeet. Compelling stuff, so remember to bookmark this site and watch this space for future updates!</p>
+      <p>G'day Interwebz! This is my gardening website where I share all the hot tips I've learned within my several months of gardening experience. I also intend to blog about things that irritate me like that possum that ate all of my silverbeet. Compelling stuff, so remember to bookmark this site and watch this space for future updates!</p>
     </main>
     <footer>&copy; <a href="https://www.twitter.com/BrendanGasparin">Brendan Gasparin</a></footer>
   </body>
