--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="device=device-width, initial-scale=1.0" />
     <title>Bee's Garden Tasmania</title>
+    <meta name="description" content="Bee's Garden Tasmania is a gardening blog." />
     <meta name="keywords" content="Brendan Gasparin, Brendan, Gasparin, gardening, australia, tasmania, hobart, organic" />
     <link rel="stylesheet" href="css/reset.css" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
@@ -13,8 +14,21 @@
     <link href="./css/style.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
-    <h1>Bee's Garden Tasmania</h1>
+    <header>
+      <h1>Bee's Garden Tasmania</h1>
+      <nav>
+        <ul>
+          <li class="current-page">Home</li>
+          <li><a href="blog.html">Blog</a></li>
+          <li><a href="links.html">Links</a></li>
+        </ul>
+      </nav>
+    </header>
     <main class="container">
+      <figure>
+        <img src="#" />
+        <figcaption></figcaption>
+      </figure>
       <p>G'day Interwebz! This is my gardening website where I share all the hot tips I've learned within my several months of gardening experience. I also intend to blog about things that irritate me like that possum that ate all of my silverbeet. Compelling stuff, so remember to bookmark this site and watch this space for future updates!</p>
     </main>
     <footer>&copy; <a href="https://www.twitter.com/BrendanGasparin">Brendan Gasparin</a></footer>
