Add hub page for blog

--- a/blog.html
+++ b/blog.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="device=device-width, initial-scale=1.0" />
     <title>Bee's Garden Tasmania</title>
-    <meta name="description" content="A gardening website" />
+    <meta name="description" content="A gardening blog" />
     <meta name="keywords" content="Brendan Gasparin, Brendan, Gasparin, bee, garden, bees garden, gardening, australia, tasmania, hobart, blog" />
     <link rel="image_src" href="./images/cover-image.jpg" />
     <link rel="stylesheet" href="css/reset.css" />
@@ -19,18 +19,19 @@
       <h1>Bee's Garden Tasmania</h1>
       <nav>
         <ul>
-          <li class="current-page">Home</li>
-          <li><a href="blog.html">Blog</a></li>
+          <li><a href="./index.html">Home</a></li>
+          <li class="current-page">Blog</li>
           <li><a href="links.html">Links</a></li>
         </ul>
       </nav>
     </header>
     <main class="container">
+      <h2>Blog</h2>
       <figure>
         <img src="#" />
         <figcaption></figcaption>
       </figure>
-      <p>G'day Interwebz! Welcome to Bee's Garden Tasmania. This is a gardening website focused on sustainable living and organic gardening practices.</p>
+      <p>Gardener Bee's blog.</p>
     </main>
     <footer>&copy; <a href="https://www.twitter.com/BrendanGasparin">Brendan Gasparin</a></footer>
   </body>
