Add cover image

--- a/blog.html
+++ b/blog.html
@@ -28,7 +28,7 @@
     <main class="container">
       <h2>Blog</h2>
       <figure>
-        <img src="#" />
+        <img src="./images/cover-image.jpg" width="200" />
         <figcaption></figcaption>
       </figure>
       <p>Gardener Bee's blog.</p>
