--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     </header>
     <main class="container">
       <figure>
-        <img src="#" />
+        <img src="./images/cover-image.jpg" width="200" />
         <figcaption></figcaption>
       </figure>
       <p>G'day Interwebz! Welcome to Bee's Garden Tasmania. This is a gardening website focused on sustainable living and organic gardening practices.</p>
