--- a/blog.html
+++ b/blog.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="device=device-width, initial-scale=1.0" />
-    <title>Bee's Garden Tasmania</title>
+    <title>Blog - Bee's Garden Tasmania</title>
     <meta name="description" content="A gardening blog" />
     <meta name="keywords" content="Brendan Gasparin, Brendan, Gasparin, bee, garden, bees garden, gardening, australia, tasmania, hobart, blog" />
     <link rel="image_src" href="./images/cover-image.jpg" />
