Change cover image

--- a/links.html
+++ b/links.html
@@ -35,7 +35,7 @@
       <h3>Planting Guides</h3>
       <ul>
         <li><a href="https://gardenate.com">Gardenate</a> tells you what to plant at what time of year depending on your climate zone.</li>
-        <li><a href="https://harmonygc.com.au/">Harmony Garden Centre</a> is where I buy my plants and seeds. They have a <a href="https://harmonygc.com.au/blog/">blog</a> describing what to do in the garden and when for the specific climate of southern Tasmania.</li>
+        <li><a href="https://harmonygc.com.au/">Harmony Garden Centre</a> is where Gardener Bee buys plants and seeds. They have a <a href="https://harmonygc.com.au/blog/">blog</a> describing what to do in the garden and when for the specific climate of southern Tasmania.</li>
       </ul>
       <h3>YouTube Channels</h3>
       <ul>
