--- a/links.html
+++ b/links.html
@@ -19,9 +19,9 @@
       <h1>Bee's Garden Tasmania</h1>
       <nav>
         <ul>
-          <li class="current-page">Home</li>
+          <li><a href="index.html">Home</a></li>
           <li><a href="blog.html">Blog</a></li>
-          <li><a href="links.html">Links</a></li>
+          <li class="current-page">Links</li>
         </ul>
       </nav>
     </header>
