--- a/links.html
+++ b/links.html
@@ -21,6 +21,7 @@
         <ul>
           <li><a href="index.html">Home</a></li>
           <li><a href="blog.html">Blog</a></li>
+          <li><a href="farmdex.html">FarmDex</a></li>
           <li class="current-page">Links</li>
         </ul>
       </nav>
