--- a/farmdex.html
+++ b/farmdex.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="device=device-width, initial-scale=1.0" />
-    <title>Bee's Garden Tasmania</title>
+    <title>FarmDex - Bee's Garden Tasmania</title>
     <meta name="description" content="A gardening website" />
-    <meta name="keywords" content="Brendan Gasparin, Brendan, Gasparin, bee, garden, bees garden, gardening, australia, tasmania, hobart, blog" />
+    <meta name="keywords" content="Brendan Gasparin, Brendan, Gasparin, bee, garden, bees garden, gardening, australia, tasmania, hobart, farmdex" />
     <link rel="image_src" href="./images/cover-image.jpg" />
     <link rel="stylesheet" href="css/reset.css" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous" />
@@ -27,11 +27,33 @@
       </nav>
     </header>
     <main class="container">
+      <h2>FarmDex</h2>
       <figure>
         <img src="./images/cover-image.jpg" width="200" />
         <figcaption></figcaption>
       </figure>
-      <p>G'day Interwebz! Welcome to Bee's Garden Tasmania. This is a gardening website focused on sustainable living and organic gardening practices.</p>
+      <p>The FarmDex contains the species from which I have obtained a yield in 2022.</p>
+      <h3>Fruit</h3>
+      <ul>
+        <li><a href="./farm/plants/zucchini.html">Zucchini</a></li>
+      </ul>
+      <h3>Herbs</h3>
+      <ul>
+        <li><a href="./farm/plants/chives.html">Chives</a></li>
+        <li><a href="./farm/plants/marjoram.html">Marjoram</a></li>
+        <li><a href="./farm/plants/oregano.html">Oregano</a></li>
+        <li><a href="./farm/plants/parsley-curly.hthml">Parsley, Curly Leaf</a></li>
+        <li><a href="./farm/plants/thyme">Thyme</a></li>
+      </ul>
+      <h3>Legumes</h3>
+      <ul>
+        <li><a href="./farm/plants/bean-dwarf.html">Bean, Dwarf</a></li>
+      </ul>
+      <h3>Vegetables</h3>
+      <ul>
+        <li><a href="./farm/plants/lettuce.html">Lettuce</a></li>
+        <li><a href="./farm/plants/silverbeet.html">Silverbeet (Chard or Swiss Chard)</a></li>
+      </ul>
     </main>
     <footer>&copy; <a href="https://www.twitter.com/BrendanGasparin">Brendan Gasparin</a></footer>
   </body>
