--- a/farm/plants/plant.html
+++ b/farm/plants/plant.html
@@ -3,35 +3,46 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="device=device-width, initial-scale=1.0" />
-    <title>Bee's Garden Tasmania</title>
+    <title>Plant - Bee's Garden Tasmania</title>
     <meta name="description" content="A gardening website" />
-    <meta name="keywords" content="Brendan Gasparin, Brendan, Gasparin, bee, garden, bees garden, gardening, australia, tasmania, hobart, blog" />
+    <meta name="keywords" content="Brendan Gasparin, Brendan, Gasparin, bee, garden, bees garden, gardening, australia, tasmania, hobart, farmdex" />
     <link rel="image_src" href="./images/cover-image.jpg" />
-    <link rel="stylesheet" href="./css/reset.css" />
+    <link rel="stylesheet" href="../../css/reset.css" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Courgette&family=Patrick+Hand&display=swap" rel="stylesheet" />
-    <link href="./css/style.css" rel="stylesheet" type="text/css" />
+    <link href="../../css/style.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
     <header>
       <h1>Bee's Garden Tasmania</h1>
       <nav>
         <ul>
-          <li class="current-page">Home</li>
-          <li><a href="blog.html">Blog</a></li>
-          <li><a href="farmdex.html">FarmDex</a></li>
-          <li><a href="links.html">Links</a></li>
+          <li><a href="../../index.html">Home</a></li>
+          <li><a href="../../blog.html">Blog</a></li>
+          <li><a href="../../farmdex.html">FarmDex</a></li>
+          <li><a href="../../links.html">Links</a></li>
         </ul>
       </nav>
     </header>
     <main class="container">
+      <h2>Plant</h2>
+      <p class="scientific-name">Species: Family</p>
       <figure>
-        <img src="./images/cover-image.jpg" width="200" />
+        <img src="../../images/cover-image.jpg" width="200" />
         <figcaption></figcaption>
       </figure>
-      <p>G'day Interwebz! Welcome to Bee's Garden Tasmania. This is a gardening website focused on sustainable living and organic gardening practices.</p>
+      <p>Sow: Container or garden.</p>
+      <p>Sow Depth: Three times diameter of seed.</p>
+      <p>Plant Space: ???-??? cm (???-??? inches)</p>
+      <p>Row Space: ?? cm (??? inches)</p>
+      <p>Height: ??? cm (??? inches)</p>
+      <p>Harvest: ???-??? days</p>
+      <p>Companion plants: ???</p>
+      <p>Avoid: ???</p>
+      <p>Germination Temperature: ???</p>
+      <p>Description</p>
     </main>
     <footer>&copy; <a href="https://www.twitter.com/BrendanGasparin">Brendan Gasparin</a></footer>
   </body>
