--- a/farm/plants/lettuce.html
+++ b/farm/plants/lettuce.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="device=device-width, initial-scale=1.0" />
-    <title>Plant - Bee's Garden Tasmania</title>
-    <meta name="description" content="A gardening website" />
-    <meta name="keywords" content="Brendan Gasparin, Brendan, Gasparin, bee, garden, bees garden, gardening, australia, tasmania, hobart, farmdex" />
+    <title>Lettuce - Bee's Garden Tasmania</title>
+    <meta name="description" content="Information on lettuce" />
+    <meta name="keywords" content="Brendan Gasparin, Brendan, Gasparin, bee, garden, bees garden, gardening, australia, tasmania, hobart, farmdex, lettuce" />
     <link rel="image_src" href="./images/cover-image.jpg" />
     <link rel="stylesheet" href="../../css/reset.css" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous" />
@@ -27,22 +27,24 @@
       </nav>
     </header>
     <main class="container">
-      <h2>Plant</h2>
-      <p class="scientific-name">Species: Family</p>
+      <h2>Lettuce</h2>
+      <p class="scientific-name">Lactuca sativa: Asteraceae</p>
       <figure>
         <img src="../../images/cover-image.jpg" width="200" />
         <figcaption></figcaption>
       </figure>
       <p><span class="row-description">Sow:</span> Container or garden.</p>
-      <p><span class="row-description">Sow Depth:</span> Three times diameter of seed.</p>
-      <p><span class="row-description">Plant Space:</span> ???-??? cm (???-??? inches)</p>
-      <p><span class="row-description">Row Space:</span> ?? cm (??? inches)</p>
-      <p><span class="row-description">Height:</span> ??? cm (??? inches)</p>
-      <p><span class="row-description">Harvest:</span> ???-??? days</p>
-      <p><span class="row-description">Companion plants:</span> ???</p>
-      <p><span class="row-description">Avoid growing with:</span> ???</p>
-      <p><span class="row-description">Germination Temperature:</span> ???</p>
-      <p>Description</p>
+      <p><span class="row-description">Sow Depth:</span> 5-8 mm.</p>
+      <p><span class="row-description">Plant Space:</span> 20-30 cm (8-12 inches)</p>
+      <p><span class="row-description">Row Space:</span> 30-50 cm (12-20 inches)</p>
+      <p><span class="row-description">Height:</span> 15-30 cm (6-12 inches)</p>
+      <p><span class="row-description">Harvest:</span> 8-12 weeks</p>
+      <p><span class="row-description">Companion plants:</span> Beet, Borage, Brassicas, Carrot, Chervil, Florence Fennel, Leeks, Marigold, Onion, Strawberry, Radish.</p>
+      <p><span class="row-description">Avoid:</span> Celery, Parsley.</p>
+      <p><span class="row-description">Germination Temperature:</span> 8°C and 27°C</p>
+      <p>Lettuce comes in a variety of shapes, sizes and colours. It is very easy to grow. Lettuce is mostly grown as a leaf vegetable but is sometimes used for its stems and pods.</p>
+      <p>Sow in rows and use thinnings for salad greens.</p>
+      <p>Lettuce has shallow roots and must be watered daily in hot or dry weather to prevent bitter flavour and bolting. Providing some shade to your plants can also prevent bolting.</p>
     </main>
     <footer>&copy; <a href="https://www.twitter.com/BrendanGasparin">Brendan Gasparin</a></footer>
   </body>
