Fix nav menu on plant pages and Farmdex page

--- a/farm/plants/lettuce.html
+++ b/farm/plants/lettuce.html
@@ -30,7 +30,7 @@
       <h2>Lettuce</h2>
       <p class="scientific-name">Lactuca sativa: Asteraceae</p>
       <figure>
-        <img src="../../images/cover-image.jpg" width="200" />
+        <img src="../../images/lettuce.jpg" width="200" />
         <figcaption></figcaption>
       </figure>
       <p><span class="row-description">Sow:</span> Container or garden.</p>
@@ -40,7 +40,7 @@
       <p><span class="row-description">Height:</span> 15-30 cm (6-12 inches)</p>
       <p><span class="row-description">Harvest:</span> 8-12 weeks</p>
       <p><span class="row-description">Companion plants:</span> Beet, Borage, Brassicas, Carrot, Chervil, Florence Fennel, Leeks, Marigold, Onion, Strawberry, Radish.</p>
-      <p><span class="row-description">Avoid:</span> Celery, Parsley.</p>
+      <p><span class="row-description">Avoid growing with:</span> Celery, Parsley.</p>
       <p><span class="row-description">Germination Temperature:</span> 8°C and 27°C</p>
       <p>Lettuce comes in a variety of shapes, sizes and colours. It is very easy to grow. Lettuce is mostly grown as a leaf vegetable but is sometimes used for its stems and pods.</p>
       <p>Sow in rows and use thinnings for salad greens.</p>
