--- a/farmdex.html
+++ b/farmdex.html
@@ -19,9 +19,9 @@
       <h1>Bee's Garden Tasmania</h1>
       <nav>
         <ul>
-          <li class="current-page">Home</li>
+          <li><a href="index.html">Home</a></li>
           <li><a href="blog.html">Blog</a></li>
-          <li><a href="farmdex.html">FarmDex</a></li>
+          <li class="current-page">FarmDex</li>
           <li><a href="links.html">Links</a></li>
         </ul>
       </nav>
@@ -32,14 +32,14 @@
         <img src="./images/cover-image.jpg" width="200" />
         <figcaption></figcaption>
       </figure>
-      <p>The FarmDex contains the species from which I have obtained a yield in 2022.</p>
+      <p>The FarmDex contains the species from which I have obtained a yield since January 2022.</p>
       <h3>Fruit</h3>
       <ul>
         <li><a href="./farm/plants/zucchini.html">Zucchini</a></li>
       </ul>
       <h3>Herbs</h3>
       <ul>
-        <li><a href="./farm/plants/chives.html">Chives</a></li>
+        <li><a href="./farm/plants/chive.html">Chive</a></li>
         <li><a href="./farm/plants/marjoram.html">Marjoram</a></li>
         <li><a href="./farm/plants/oregano.html">Oregano</a></li>
         <li><a href="./farm/plants/parsley-curly.hthml">Parsley, Curly Leaf</a></li>
