--- a/farm/plants/silverbeet.html
+++ b/farm/plants/silverbeet.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="device=device-width, initial-scale=1.0" />
     <title>Plant - Bee's Garden Tasmania</title>
     <meta name="description" content="A gardening website" />
-    <meta name="keywords" content="Brendan Gasparin, Brendan, Gasparin, bee, garden, bees garden, gardening, australia, tasmania, hobart, farmdex" />
-    <link rel="image_src" href="./images/cover-image.jpg" />
+    <meta name="keywords" content="Brendan Gasparin, Brendan, Gasparin, bee, garden, bees garden, gardening, australia, tasmania, hobart, farmdex, silverbeet, chard, swiss chard" />
+    <link rel="image_src" href="../../images/cover-image.jpg" />
     <link rel="stylesheet" href="../../css/reset.css" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
