--- a/farm/plants/lettuce.html
+++ b/farm/plants/lettuce.html
@@ -6,7 +6,7 @@
     <title>Lettuce - Bee's Garden Tasmania</title>
     <meta name="description" content="Information on lettuce" />
     <meta name="keywords" content="Brendan Gasparin, Brendan, Gasparin, bee, garden, bees garden, gardening, australia, tasmania, hobart, farmdex, lettuce" />
-    <link rel="image_src" href="../../images/cover-image.jpg" />
+    <link rel="image_src" href="../../images/lettuce.jpg" />
     <link rel="stylesheet" href="../../css/reset.css" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
