--- a/farm/plants/silverbeet.html
+++ b/farm/plants/silverbeet.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="device=device-width, initial-scale=1.0" />
-    <title>Plant - Bee's Garden Tasmania</title>
+    <title>Silverbeet (or Swiss Chard) - Bee's Garden Tasmania</title>
     <meta name="description" content="A gardening website" />
     <meta name="keywords" content="Brendan Gasparin, Brendan, Gasparin, bee, garden, bees garden, gardening, australia, tasmania, hobart, farmdex, silverbeet, chard, swiss chard" />
-    <link rel="image_src" href="../../images/cover-image.jpg" />
+    <link rel="image_src" href="../../images/silverbeet.jpg" />
     <link rel="stylesheet" href="../../css/reset.css" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -27,22 +27,24 @@
       </nav>
     </header>
     <main class="container">
-      <h2>Plant</h2>
-      <p class="scientific-name">Species: Family</p>
+      <h2>Silverbeet (or Swiss Chard)</h2>
+      <p class="scientific-name">Beta vulgaris: Amaranthaceae</p>
       <figure>
-        <img src="../../images/cover-image.jpg" width="200" />
+        <img src="../../images/silverbeet.jpg" width="200" />
         <figcaption></figcaption>
       </figure>
       <p><span class="row-description">Sow:</span> Container or garden.</p>
-      <p><span class="row-description">Sow Depth:</span> Three times diameter of seed.</p>
-      <p><span class="row-description">Plant Space:</span> ???-??? cm (???-??? inches)</p>
-      <p><span class="row-description">Row Space:</span> ?? cm (??? inches)</p>
-      <p><span class="row-description">Height:</span> ??? cm (??? inches)</p>
-      <p><span class="row-description">Harvest:</span> ???-??? days</p>
-      <p><span class="row-description">Companion plants:</span> ???</p>
-      <p><span class="row-description">Avoid growing with:</span> ???</p>
-      <p><span class="row-description">Germination Temperature:</span> ???</p>
-      <p>Description</p>
+      <p><span class="row-description">Sow Depth:</span> 10 mm</p>
+      <p><span class="row-description">Plant Space:</span> 15-30 cm (6-12 inches)</p>
+      <p><span class="row-description">Row Space:</span> 50 cm (20 inches)</p>
+      <p><span class="row-description">Height:</span> 75 cm (30 inches)</p>
+      <p><span class="row-description">Harvest:</span> 7-12 weeks</p>
+      <p><span class="row-description">Companion plants:</span> Allium sp. (onion, garlic, chives), beans, brassica sp. (cabbage, cauliflower, etc.), lavender, parnsip, tomato</p>
+      <p><span class="row-description">Avoid growing with:</span> Corn, cucurbit, melon, most herbs, potato</p>
+      <p><span class="row-description">Germination Temperature:</span> Between 10°C and 30°C</p>
+      <p>Silverbeet is a cut and come again plant growing green leaves with white (or red, yellow, or orange) stalks. The leaves and stalks are both edible.</p>
+      <p>Once silverbeet bolts to seed, it will resprout around the base if the main plant is cut off.</p>
+      <p>Silverbeet is frost and heat tolerant and grows well in most soils. It benefits from dressings of mulch and well-rotted manure.</p>
     </main>
     <footer>&copy; <a href="https://www.twitter.com/BrendanGasparin">Brendan Gasparin</a></footer>
   </body>
